--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar>
-  <img src="../../assets/ACME.png">
- <span> Daily Schedule</span> 
- <span class="filler-space"></span>
- <span><i class="material-icons">help</i></span>
+  <img src="../../assets/ACME.png" />
+  <span> Daily Schedule</span>
+  <span class="filler-space"></span>
+  <a>
+    <span><i class="material-icons">help</i></span>
+    Help
+  </a>
 </mat-toolbar>
